frame of the project created

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Weather App - Comming soon...</h1>
+    <div class="container">
+        <div class="card">
+            <div class="search_group">
+                <input />
+                <button>Search</button>
+            </div>
+            <div class="result">
+                <img src="sun.png"/>
+                <h2>30</h2>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
